# CodinaColada

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
CodingColada/: App.cpp  App.h  CMakeLists.txt  CodingColada.cpp  IEngine.h  Makefile  SDLEngine.cpp  SDLEngine.h  main.cpp  main.h
CodingColada/engine/: AnimatedSpriteComponent.cpp  AnimatedSpriteComponent.h  CodinaColadaWindow.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  IAudio.h  IComponent.h  IEngine.h  IInput.h  IRenderer.h  IShape.h  ISound.h  ISprite.h  NetworkComponent.cpp  NetworkComponent.h  RectangleShape.cpp  RectangleShape.h  RigidbodyComponent.cpp  RigidbodyComponent.h  ShapeComponent.cpp  ShapeComponent.h  SpriteComponent.cpp  SpriteComponent.h  Vector2.cpp  Vector2.h
CodingColada/engine/ConsoleRenderer/: ConsoleInput.h
CodingColada/engine/Game/: Ball.h  Paddle.h
CodingColada/engine/OpenGLRenderer/: Color.h  OpenGLInput.cpp  OpenGLInput.h  OpenGLRectangleShape.cpp  OpenGLRectangleShape.h  OpenGLRenderer.cpp  OpenGLShader.h  OpenGLSprite.h  OpenGLTexture2D.h
CodingColada/engine/OpenGLRenderer/shader/: ledcircle.frag  sprite.vert
CodingColada/engine/audio/: FMODSoundManager.cpp  FMODSoundManager.h
CodingColada/engine/networking/: Client.h  Connection.h  Message.h  Server.h  ThreadSafeQueue.h
CodingColada/engine/opengl/: OpenGLInput.cpp  OpenGLInput.h  OpenGLRectangleShape.cpp  OpenGLRectangleShape.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
CodingColada/engine/opengl/shader/: default.frag  default.vert  grid.frag  grid.vert  sprite.frag  sprite.vert
CodingColada/game/client/: ClientApp.cpp  CustomClient.h
CodingColada/game/common/: Ball.cpp  Ball.h  CameraManager.cpp  CameraManager.h  GameManager.cpp  GameManager.h  Grid.cpp  Grid.h  HoverTile.cpp  HoverTile.h  Level.h  Paddle.cpp  Paddle.h  PathTile.cpp  PathTile.h  Player.cpp  Player.h  grid.h
CodingColada/game/common/resources/shaders/: build_grid.frag  grid.frag  hover.frag  neon.frag  neon_pulse.frag
CodingColada/game/common/tower/: Tower.cpp  Tower.h
CodingColada/game/server/: CustomServer.h  ServerApp.cpp  ServerApp.h  Server_Main.cpp
CodingColada/src/: App.cpp  App.h  CodinaColadaWindow.cpp  CodinaColadaWindow.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  IComponent.h  IEngine.h  IInput.h  IRenderer.h  IShape.h  ISprite.h  NetworkComponent.cpp  NetworkComponent.h  OpenGLInput.cpp  OpenGLInput.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Openglengine.cpp  Openglengine.h  RectangleShape.cpp  RectangleShape.h  RigidbodyComponent.cpp  RigidbodyComponent.h  SDLEngine.cpp  SDLEngine.h  ShapeComponent.cpp  ShapeComponent.h  SpriteComponent.cpp  SpriteComponent.h  Vector2.cpp  Vector2.h  main.cpp
CodingColada/src/ConsoleRenderer/: ConsoleInput.cpp  ConsoleInput.h  ConsoleRenderer.cpp  ConsoleRenderer.h
CodingColada/src/Game/: App.cpp  App.h  Ball.h  Paddle.h  main.cpp
CodingColada/src/OpenGLRenderer/: Color.h  OpenGLInput.cpp  OpenGLInput.h  OpenGLRectangleShape.cpp  OpenGLRectangleShape.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLSprite.cpp  OpenGLSprite.h  OpenGLTexture2D.cpp
CodingColada/src/OpenGLRenderer/shader/: circle.frag  cool.vert  sprite.vert  water.frag
CodingColada/src/game/: App.cpp  App.h  Ball.cpp  Ball.h  GameManager.cpp  GameManager.h  Grid.cpp  Heap.h  HoverTile.cpp  HoverTile.h  Paddle.cpp  Paddle.h  PathTile.cpp  PathTile.h  Tile.cpp  Tile.h  grid.h
CodingColada/src/game/network/: CustomServer.h
CodingColada/src/game/tower/: Tower.cpp  Tower.h
CodingColada/src/networking/: Connection.h  Message.h  Network.h  Server.h
CodingColada/src/opengl/: OpenGLInput.cpp  OpenGLInput.h  OpenGLRectangleShape.cpp  OpenGLRectangleShape.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h  OpenGLTexture2D.h
CodingColada/src/opengl/shader/: cool.frag  default.vert  dragon.frag  glowcircle.frag  grid.frag  hover.frag  sprite.frag  sprite.vert
CodingColadaTests/: CMakeLists.txt  main_test.cpp
